--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Melhores celulares para comprar nos dias atuais</title>
+</head>
+<body>
+    <header>
+<img src="logo.png" alt="">
+<ul>
+    <li>os melhores</li>
+</ul>
+    </header>
+    <main>
 
+    </main>
+    <footer>
+
+    </footer>
+
+</body>
+</html>
