--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melhores celulares para comprar nos dias atuais</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
 <img src="logo.png" alt="">
 <ul>
-    <li>os melhores</li>
+     <Li>MENU 01</Li>  
+     <Li>MENU 02</Li> 
+    <Li>MENU 03</Li>
 </ul>
     </header>
     <main>
