--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melhores celulares para comprar nos dias atuais</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-<img src="logo.png" alt="">
-<ul>
-     <Li>MENU 01</Li>  
-     <Li>MENU 02</Li> 
-    <Li>MENU 03</Li>
-</ul>
+    <header class="cabecalho">
+        <img src="logo.png" alt="">
+        <ul class="menu">
+            <li class="menu-item">MENU 01</Li>  
+            <li class="menu-item">MENU 02</Li> 
+            <li class="menu-item">MENU 03</Li>
+        </ul>
     </header>
     <main>
 
@@ -25,3 +25,4 @@
 
 </body>
 </html>
+
