--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
         </ul>
     </header>
     <main>
-
+<section class="principal">
+    <div class="texto-e-titulo">
+<h1 class="principal-titulo">melhores celulares para comprar nos dias atuais</h1>
+<p class="principal-texto"> O QUE FAZEMOS? SÓ OS MELHORES CELULARES FAZEMOS VOCÊ FICAR CIENTE DOS MELHORES CELULARES QUE TEM NO MERCADO PARA TU FAZER UMA COMPRA DE QUALIDADE, ENTÃO VAMOS LÁ!
+    OS MELHORES SÃO DAS MARCAS MAIS FAMOSA POR EXEMPLO APPLE, SAMSUNG, XIAOMI ETC...</p>
+</div>
+<img src="fotoprincipal.png"alt=""class="principal-imagem">
     </main>
     <footer>
 
